Updates to the code

--- a/app/views/appliances/index.html.haml
+++ b/app/views/appliances/index.html.haml
@@ -1,9 +1,9 @@
 %h2 Appliances List Page
-.center{:style =>'left-padding:10px;text-align:center'}
+.center-div
   = current_user.email | 
   = link_to "Sign Out", destroy_user_session_path, :method => :delete
 %br
-= link_to "Reachable Targets", appliances_target_path
+= link_to "Reachable Targets", targets_path
 %br
 = will_paginate @appliances
 %table.table.table-striped
